playbooks/paheko-http.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paheko-ingress
  namespace: paheko
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    # On force l'utilisation des deux points d'entrée
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    # On désactive explicitement la redirection TLS pour cet Ingress précis
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - paheko.app.xixtu.eu
      secretName: paheko-tls
  rules:
    - host: paheko.app.xixtu.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paheko-service
                port:
                  number: 80
