playbooks/paheko-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paheko-ingress
  namespace: paheko
  annotations:
    # On spécifie la classe Traefik
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    # TRÈS IMPORTANT : On empêche la redirection vers le HTTPS pour laisser passer Let's Encrypt
    traefik.ingress.kubernetes.io/router.middlewares: "" 
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/private-key-algorithm: "ECDSA"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - paheko.app.xixtu.eu
      secretName: paheko-tls
  rules:
    - host: paheko.app.xixtu.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paheko-service
                port:
                  number: 80
